ForwardAuth, SyncDockerJob, Users/Groups/Applications associations.
