# app/controllers/forward_auth_controller.rb
@@ -9,36 +9,32 @@ class ForwardAuthController < ApplicationController
     uri = URI("#{proto}://#{host}:#{port}#{path}")
     logger.info "Forward auth: #{uri}"
     if logged_in?
-      return head(:unauthorized) unless authenticate_host_docker(host, current_user)
-      return head(
-        :ok,
-        "X-Authr-User-Id" => current_user.id,
-        "X-Authr-User-Username" => current_user.username,
-        "X-Authr-User-Name" => current_user.name,
-        "X-Authr-Group-Ids" => current_user.groups.to_a.map(&:id).join(","),
-        "X-Authr-Group-Names" => current_user.groups.to_a.map(&:name).join(","),
-      )
+      if authenticate_application(host, current_user)
+        return head(
+          :ok,
+          "X-Authr-User-Id" => current_user.id,
+          "X-Authr-User-Username" => current_user.username,
+          "X-Authr-User-Name" => current_user.name,
+          "X-Authr-Group-Ids" => current_user.groups.to_a.map(&:id).join(","),
+          "X-Authr-Group-Names" => current_user.groups.to_a.map(&:name).join(","),
+        )
+      else
+        reset_session
+        return redirect_to(forward_auth_login_url(rd: uri, unauthorized: true), allow_other_host: true)
+      end
     end
     redirect_to(forward_auth_login_url(rd: uri), allow_other_host: true)
   end
 
-  def login; end
+  def login
+    reset_session
+  end
 
-  private def authenticate_host_docker(host, user)
-    authr_containers = Docker::Container.all(all: true, filters: { label: [ "authr.host" ] }.to_json).map(&:info)
-    host_containers = authr_containers.select { |x| x["Labels"]["authr.host"].split(/,\s?/).include? host }
-    raise "Only 1 container should be exist for the authr.host #{host}" if host_containers.count > 1
-    host_container = host_containers.first
-    return false unless host_container.present?
-    allowed_user_ids = host_container["Labels"]["authr.allowed_user_ids"].split(/,\s?/).map(&:to_i)
-    allowed_users = host_container["Labels"]["authr.allowed_users"].split(/,\s?/)
-    allowed_group_ids = host_container["Labels"]["authr.allowed_group_ids"].split(/,\s?/).map(&:to_i)
-    allowed_groups = host_container["Labels"]["authr.allowed_groups"].split(/,\s?/)
-    return true if allowed_user_ids.include?(user.id)
-    return true if allowed_users.include?(user.username)
-    groups = user.groups.to_a
-    return true if groups.map(&:id).intersection(allowed_group_ids).present?
-    return true if groups.map(&:name).intersection(allowed_groups).present?
+  private def authenticate_application(host, user)
+    @application = Application.for_hostname(host).first
+    return false unless @application
+    return true if @application.application_groups.where(group_id: user.group_ids).exists?
+    return true if @application.application_users.where(user_id: user.id).exists?
     false
   end
 end
